@@ -40,4 +40,5 @@ Version 2024.3.2
 
 Version 2024.3.3
 - Fixed an issue where an SVG image is not always scaled properly, especially when uses relative units internally (percentage, cm, "mm", etc.).
-- Fixed a sporadic `AccessViolationException` that occurred when `UseEnvironmentFonts` was set to `false` and documents were generated in parallel.
+- Fixed a sporadic `AccessViolationException` that occurred when UseEnvironmentFonts was set to `false` and documents were generated in parallel.
+- Enhanced exception messages when the FontManager.RegisterFont method fails due to an invalid font file.
